--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3760,12 +3760,13 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-top: 8px;
   margin-right: 15px;
   margin-bottom: 8px;
-  background-color: transparent;
+  background-color: #FFCC00;
   background-image: none;
-  border: 1px solid transparent;
+  border: 1px solid #FFCC00;
   border-radius: 4px;
 }
 .navbar-toggle:focus {
+  background-color: transparent;
   outline: none;
 }
 .navbar-toggle .icon-bar {
@@ -3773,6 +3774,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   width: 22px;
   height: 2px;
   border-radius: 1px;
+  background-color: #990000;
+
 }
 .navbar-toggle .icon-bar + .icon-bar {
   margin-top: 4px;
@@ -3972,11 +3975,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   background-color: transparent;
 }
 .navbar-default .navbar-toggle {
-  border-color: #ddd;
+  border-color: #FFCC00;
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: #ddd;
+  background-color: #FFCC00;
 }
 .navbar-default .navbar-toggle .icon-bar {
   background-color: #888;
@@ -4142,7 +4145,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   padding: 6px 12px;
   margin-left: -1px;
   line-height: 1.42857143;
-  color: #428bca;
+  color: #990000;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #ddd;
@@ -4162,7 +4165,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .pagination > li > span:hover,
 .pagination > li > a:focus,
 .pagination > li > span:focus {
-  color: #2a6496;
+  color: #FFCC00;
   background-color: #eee;
   border-color: #ddd;
 }
@@ -4173,10 +4176,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .pagination > .active > a:focus,
 .pagination > .active > span:focus {
   z-index: 2;
-  color: #fff;
+  color: #990000;
   cursor: default;
-  background-color: #428bca;
-  border-color: #428bca;
+  background-color: #FFCC00;
+  border-color: #FFCC00;
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
